// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Token Export Snapshots > should match snapshot for bobSepoliaTokens 1`] = `
{
  "usdc": ERC20Token {
    "address": "0x2c1f73d37E7cdbA2792156139b0d35A765d595C5",
    "chainId": 808813,
    "decimals": 6,
    "isNative": false,
    "isToken": true,
    "name": "Bridged USDC (BOB)",
    "projectLink": undefined,
    "symbol": "USDC",
  },
  "weth": ERC20Token {
    "address": "0x4200000000000000000000000000000000000006",
    "chainId": 808813,
    "decimals": 18,
    "isNative": false,
    "isToken": true,
    "name": "Wrapped Ether",
    "projectLink": "https://weth.io",
    "symbol": "WETH",
  },
}
`;

exports[`Token Export Snapshots > should match snapshot for bobTokens 1`] = `
{
  "tbtc": ERC20Token {
    "address": "0xBBa2eF945D523C4e2608C9E1214C2Cc64D4fc2e2",
    "chainId": 60808,
    "decimals": 18,
    "isNative": false,
    "isToken": true,
    "name": "tBTC v2",
    "projectLink": undefined,
    "symbol": "tBTC",
  },
  "usdc": ERC20Token {
    "address": "0xe75D0fB2C24A55cA1e3F96781a2bCC7bdba058F0",
    "chainId": 60808,
    "decimals": 6,
    "isNative": false,
    "isToken": true,
    "name": "Bridged USDC (BOB)",
    "projectLink": undefined,
    "symbol": "USDC",
  },
  "usdt": ERC20Token {
    "address": "0x05D032ac25d322df992303dCa074EE7392C117b9",
    "chainId": 60808,
    "decimals": 6,
    "isNative": false,
    "isToken": true,
    "name": "Tether USD",
    "projectLink": undefined,
    "symbol": "USDT",
  },
  "wbtc": ERC20Token {
    "address": "0x03C7054BCB39f7b2e5B2c7AcB37583e32D70Cfa3",
    "chainId": 60808,
    "decimals": 8,
    "isNative": false,
    "isToken": true,
    "name": "Wrapped BTC",
    "projectLink": undefined,
    "symbol": "WBTC",
  },
  "weth": ERC20Token {
    "address": "0x0000000000000000000000000000000000000000",
    "chainId": 60808,
    "decimals": 18,
    "isNative": false,
    "isToken": true,
    "name": "Wrapped Ether",
    "projectLink": "https://weth.io",
    "symbol": "WETH",
  },
}
`;
